--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
-#root {
-  max-height: 100vh;
-  max-width: 100vw;
+#root, html, body {
+  min-height: 100vh;
+  min-width: 100%;
   width: 100%;
-  height: 100%;
-  background-color: #D7D4FF;
-}
-
-html, body{
   background-color: #D7D4FF;
 }
 
