--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   min-height: 100vh;
   min-width: 100%;
   width: 100%;
-  background-color: #D7D4FF;
+  /* background: rgb(57,47,110);
+  background: radial-gradient(circle, rgba(57,47,110,1) 0%, rgba(46,56,129,1) 100%); */
+  /* background: rgb(138,121,231);
+  background: linear-gradient(49deg, rgba(138,121,231,1) 0%, rgba(61,73,162,1) 100%); */
+  background: rgb(159,146,228);
+  background: radial-gradient(circle, rgba(159,146,228,1) 0%, rgba(28,40,126,1) 100%);
+  font-family: 'Noto Sans', sans-serif;
 }
 
 *{
