--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 html,
 body {
   height: 100vh;
-  width: 100%;
-  background: #327AD9;
+  min-width: 100%;
   font-family: 'Lato', sans-serif;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 * {
